--- a/SeleniumTest/.settings/org.eclipse.m2e.core.prefs
+++ b/SeleniumTest/.settings/org.eclipse.m2e.core.prefs
@@ -1,4 +1,4 @@
-activeProfiles=C\:\\Users\\vani\\.m2\\repository
+activeProfiles=
 eclipse.preferences.version=1
 resolveWorkspaceProjects=true
 version=1
