--- a/SeleniumTest/pom.xml
+++ b/SeleniumTest/pom.xml
@@ -33,9 +33,9 @@
   <artifactId>maven-surefire-plugin</artifactId>
   <version>2.21.0</version>
   <configuration>
-   <inputs>
-    <input>**/DriverFile.class</input>
-  </inputs>
+   <includes>
+    <include>**/DriverFile.class</include>
+  </includes>
   </configuration>
  
  </plugin>
